--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "unal.informacion.teoria.recorder"
-        minSdkVersion 18
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,9 +26,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile('io.socket:socket.io-client:0.7.0') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+	// http://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
     compile 'com.android.support:appcompat-v7:23.4.0'
-	compile ('io.socket:socket.io-client:0.7.0') {
-		// excluding org.json which is provided by Android
-		exclude group: 'org.json', module: 'json'
-	}
+    compile 'com.android.support:design:23.4.0'
 }
